--- a/coffee_project/src/main/resources/templates/oder/index.html
+++ b/coffee_project/src/main/resources/templates/oder/index.html
@@ -26,11 +26,12 @@
                         <p class="h1">Bán Chạy Nhất</p>
                     </div>
                     <div class="container-fluid position-relative d-flex flex-sm-wrap flex-md-nowrap justify-content-between gap-4 mt-3">
-                        <div class="card position-relative" th:each="product:${bestSeller}">
+                        <div class="card position-relative shadow-sm" style="border-radius: 2em; padding: 1.5em .5em .5em;"
+                             th:each="product:${bestSeller}">
                             <span class="position-absolute " style="top: 5%; left: 83%">
                                 <img src="../../static/hot.png" class="w-100 h-100" th:src="@{/hot.png}" alt="">
                             </span>
-                            <img th:src="${product.productImagePath}"
+                            <img th:src="${product.productImagePath}" src="https://www.highlandscoffee.com.vn/vnt_upload/product/04_2023/New_product/HLC_New_logo_5.1_Products__PHIN_SUADA.jpg"
                                  class="card-img-top" alt="...">
                             <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title" th:text="${product.productName}"></h5>
@@ -74,7 +75,7 @@
                     </div>
                     <div class="container-fluid d-flex flex-wrap gap-2 justify-content-between">
 
-                        <div class="card" style="width: 18rem;margin-bottom: 30px"
+                        <div class="card shadow-sm" style="width: 18rem;margin-bottom: 30px;border-radius: 2em; padding: 1.5em .5em .5em;"
                              th:each="product:${listProduct}">
                             <img th:src="${product.productImagePath}"
                                  class="card-img-top" alt="...">
