tín[coffee][product] fix comment

--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -193,7 +193,7 @@
                                     class="card-text">Product Price
                                 </td>
 <!--                                <div class="d-flex justify-content-between">-->
-                                    <td class=" d-flex justify-content-center">
+                                    <td style="text-align: center">
                                         <a style="color: white; margin-right: 1rem"
                                            th:href="@{/product/edit/{id}(id=${product.productId})}">
                                             <button class="btn btn-primary">
