[Quan][Account][coffee] Căn chỉnh link quyền

--- a/coffee_project/src/main/resources/templates/account/change-pass.html
+++ b/coffee_project/src/main/resources/templates/account/change-pass.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div th:replace="layout::side-bar">
         </div>
-        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">d
             <div th:replace="layout::nav-bar">
             </div>
             <div class="row min-vh-100 content">
@@ -27,11 +27,6 @@
                         <h1 style="text-align: center;margin-top: 2rem">Đổi mật khẩu</h1>
                         <!--                        nust quay laji-->
                         <div class="row col-12" style="margin: auto">
-                            <div class="col-12"><a style="text-decoration: none" href="/order/">
-                                <button title="Quay lại"
-                                        class="btn btn-primary">
-                                    <i class="fa-solid fa-circle-arrow-left"></i></button>
-                            </a></div>
                             <div class="col-2">
                             </div>
                             <div class="col-8">
