--- a/coffee_project/src/main/resources/templates/account/list-account.html
+++ b/coffee_project/src/main/resources/templates/account/list-account.html
@@ -75,7 +75,7 @@
                                     <th>STT</th>
                                     <th>Tên tài khoản</th>
                                     <th>Vị Trí</th>
-                                    <th colspan="1">Xóa</th>
+                                    <th colspan="1">Chức năng</th>
                                 </tr>
                                 <tr th:each="a,status:${accountPage}">
                                     <td th:text="${status.count}"></td>
