--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -8,7 +8,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
-    <link rel="shortcut icon" href="/static/healthy_drink-1_4x.png" th:href="@{/healthy_drink-1_4x.png}">
+    <link rel="shortcut icon" href="/static/android-chrome-512x512.png" th:href="@{/android-chrome-512x512.png}">
     <style>
         .form {
             width: 70%;
@@ -27,75 +27,74 @@
             <div class="row min-vh-100 content">
                 <div class="col-12">
                     <!-------------------------------------------Main----------------------------------------------->
+                    <h1 style="text-align: center; margin-top: 2rem">Đăng Ký Khách Hàng</h1>
+                    <a class="col-1 mt-2" style="text-decoration: none" href="/product">
+                        <button title="Quay lại"
+                                class="btn btn-primary">
+                            <i class="fa-solid fa-circle-arrow-left"></i></button>
+                    </a>
                     <div class="form">
                         <form class="form-group" th:action="@{/customer/save}" th:object="${customerDto}" method="post">
-                            <fieldset>
-                                <legend style="text-align: center; margin-top: 2rem"><h1><b>Đăng Ký Khách Hàng</b></h1>
-                                </legend>
-                                <div class="table">
-                                    <table class="table table-hover">
-                                        <tr>
-                                            <th>Tên khách hàng <span style="color: red">*</span></th>
-                                            <td>
-                                                <input class="form-control" type="text" id="enterName"
-                                                       th:field="*{customerName}" th:value="${customerDto.customerName}">
-                                                <div style="height: 20px">
-                                                    <small th:if="${#fields.hasErrors('customerName')}"
-                                                           th:errors="*{customerName}"
-                                                           style="color: red">
-                                                    </small>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th>Giới tính <span style="color: red">*</span></th>
-                                            <td>
-                                                <input type="radio" th:field="*{customerGender}" th:value="true">
-                                                <span th:text="Nam"></span>
-                                                <input type="radio" th:field="*{customerGender}" th:value="false">
-                                                <span th:text="Nữ"></span>
-                                                </br>
-                                                <div style="height: 20px">
-                                                    <small th:if="${#fields.hasErrors('customerGender')}"
-                                                           th:errors="*{customerGender}" style="color: red">
-                                                    </small>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th>Ngày sinh <span style="color: red">*</span></th>
-                                            <td><input class="form-control" type="date" th:field="*{customerBirthday}">
-                                                <div style="height: 20px">
-                                                    <small th:if="${#fields.hasErrors('customerBirthday')}"
-                                                           th:errors="*{customerBirthday}" style="color: red"></small>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th>Số điện thoại <span style="color: red">*</span></th>
-                                            <td><input class="form-control" type="text"
-                                                       th:field="*{customerPhoneNumber}">
-                                                <div style="height: 20px">
-                                                    <small th:if="${#fields.hasErrors('customerPhoneNumber')}"
-                                                           th:errors="*{customerPhoneNumber}"
-                                                           style="color: red"></small>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td></td>
-                                            <td>
-                                                <button type="submit" class="btn btn-primary">
-                                                    Thêm mới
-                                                </button>
-                                                <a th:href="@{/customer/list}" style="text-decoration: none">
-                                                    <button type="button" class="btn btn-secondary"> Thoát</button>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </fieldset>
+                            <div class="table">
+                                <table class="table table-hover">
+                                    <tr>
+                                        <th>Tên khách hàng <span style="color: red">*</span></th>
+                                        <td>
+                                            <input class="form-control" type="text" id="enterName"
+                                                   th:field="*{customerName}" th:value="${customerDto.customerName}">
+                                            <div style="height: 20px">
+                                                <small th:if="${#fields.hasErrors('customerName')}"
+                                                       th:errors="*{customerName}"
+                                                       style="color: red">
+                                                </small>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Giới tính <span style="color: red">*</span></th>
+                                        <td>
+                                            <input type="radio" th:field="*{customerGender}" th:value="true">
+                                            <span th:text="Nam"></span>
+                                            <input type="radio" th:field="*{customerGender}" th:value="false">
+                                            <span th:text="Nữ"></span>
+                                            </br>
+                                            <div style="height: 20px">
+                                                <small th:if="${#fields.hasErrors('customerGender')}"
+                                                       th:errors="*{customerGender}" style="color: red">
+                                                </small>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Ngày sinh <span style="color: red">*</span></th>
+                                        <td><input class="form-control" type="date" th:field="*{customerBirthday}">
+                                            <div style="height: 20px">
+                                                <small th:if="${#fields.hasErrors('customerBirthday')}"
+                                                       th:errors="*{customerBirthday}" style="color: red"></small>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Số điện thoại <span style="color: red">*</span></th>
+                                        <td><input class="form-control" type="text"
+                                                   th:field="*{customerPhoneNumber}">
+                                            <div style="height: 20px">
+                                                <small th:if="${#fields.hasErrors('customerPhoneNumber')}"
+                                                       th:errors="*{customerPhoneNumber}"
+                                                       style="color: red"></small>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            <button type="submit" class="btn btn-primary" style="width: 100%">
+                                                Thêm mới
+                                            </button>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
                         </form>
                     </div>
                     <!-------------------------------------------- End-main-------------------------------------------->
@@ -115,15 +114,16 @@
         let arrayName = name.split("");
         let newName = arrayName[0].toUpperCase();
         for (let i = 1; i < arrayName.length; i++) {
-            if (arrayName[i-1] === " " && arrayName[i] === "") {
+            if (arrayName[i - 1] === " " && arrayName[i] === "") {
                 continue;
             }
-            if (arrayName[i-1] === " " && arrayName[i] != " ") {
+            if (arrayName[i - 1] === " " && arrayName[i] != " ") {
                 newName += " " + arrayName[i].toUpperCase();
-            } else if (arrayName[i] != " "){
+            } else if (arrayName[i] != " ") {
                 newName += arrayName[i].toLowerCase();
             }
-        } document.getElementById('enterName').value = newName;
+        }
+        document.getElementById('enterName').value = newName;
     })
 </script>
 </body>
